--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
   },
   "devDependencies": {
     "eslint": "7.14.0"
-  }
+  },
+  "resolutions": {
+    "**/lodash": ">=4.17.19",
+    "**/deep-extend": ">=0.5.1"
+ }
 }
